--- a/style.css
+++ b/style.css
@@ -41,8 +41,8 @@ section {
   padding-top: 1rem;
 }
 
-main > img{
-    padding: 4rem;
+main > img {
+  padding: 4rem;
   padding-left: 9rem;
 }
 
@@ -167,4 +167,39 @@ span {
   display: flex;
   align-items: center;
   justify-content: space-around;
+}
+
+@media screen and (min-width: 30rem) {
+  body {
+    width: 46rem;
+    margin-left: 23rem;
+  }
+
+  main > img{
+    margin-left: 11rem;
+  }
+
+  section {
+    display: flex;
+    padding-right: 2rem;
+    padding-left: 0.4rem;
+  }
+
+  .left-container {
+    width: 100%;
+    height: 20rem;
+  }
+
+  .right-container{
+    height: 19rem;
+  }
+
+  .right-container > div{
+    padding-top: 2rem;
+  }
+
+  .reset{
+    width: 17rem;
+    margin-right: 1rem;
+  }
 }
