--- a/style.css
+++ b/style.css
@@ -1,7 +1,5 @@
 @charset "utf-8";
 
-@import url("https://fonts.google.com/specimen/Space+Mono");
-
 /* Colors */
 :root {
   /*Primary*/
@@ -167,6 +165,16 @@ span {
   display: flex;
   align-items: center;
   justify-content: space-around;
+}
+
+.add{
+  color: red;
+}
+
+.mesgBox{
+  display: flex;
+  justify-content: space-between;
+  
 }
 
 @media screen and (min-width: 30rem) {
